--- a/index.html
+++ b/index.html
@@ -25,13 +25,16 @@
     </div>
     <div class="layout-2">
         <div class="left">
-            <h2>EXICITING OFFERS</h2><hr>
-            <h2>**GET OUR SPECIAL THALI FOR ONLY RS-100 ONLY ON MONDAY**</h2><hr>
+            <h2>EXICITING OFFERS</h2>
+            <hr>
+            <h2>**GET OUR SPECIAL THALI FOR ONLY RS-100 ONLY ON MONDAY**</h2>
+            <hr>
             <h2>PLZ RATE US OUT OF 5</h2>
         </div>
         <div class="right">
             <form>
-                <h1>PLEASE REGISTER HERE</h1><hr><br>
+                <h1>PLEASE REGISTER HERE</h1>
+                <hr><br>
                 <label for="fname">First Name:</label><br>
                 <input type="name" name="First Name" id="fname" placeholder="Enter Your First Name"><br><br>
                 <label for="lname">Last Name:</label><br>
@@ -54,29 +57,41 @@
         </div>
     </div><br>
     <div class="center">
-    <div class="cbox"><h1>MENU</h1></div></div><hr>
+        <div class="cbox">
+            <h1>MENU</h1>
+        </div>
+    </div>
+    <hr>
     <div class="menu">
-        <div class="food"><h1>Starters</h1><hr>
-        <ul>
-            <li>Paneer Tikka</li>
-            <li>Tomato Soup</li>
-            <li>Afghani Chaap</li>
-            <li>Veg Raita</li>
-            <li>Gol gappa</li>
-            <li>Tikki</li>
-            <li>Fried Rice</li>
-        </ul></div>
-        <div class="food"><h1>South Indian</h1><hr>
-        <ul>
-            <li>Masala Dosa</li>
-            <li>Idli Sambaer</li>
-            <li>Mix Veg.Uttapam</li>
-            <li>Onion Dosa</li>
-            <li>Vada Sambhar</li>
-            <li>Paper Plain Dosa</li>
-            <li>Tomato Uttapam</li>
-        </ul></div>
-        <div class="food"><h1>Indian Kitchen</h1><hr>
+        <div class="food">
+            <h1>Starters</h1>
+            <hr>
+            <ul>
+                <li>Paneer Tikka</li>
+                <li>Tomato Soup</li>
+                <li>Afghani Chaap</li>
+                <li>Veg Raita</li>
+                <li>Gol gappa</li>
+                <li>Tikki</li>
+                <li>Fried Rice</li>
+            </ul>
+        </div>
+        <div class="food">
+            <h1>South Indian</h1>
+            <hr>
+            <ul>
+                <li>Masala Dosa</li>
+                <li>Idli Sambaer</li>
+                <li>Mix Veg.Uttapam</li>
+                <li>Onion Dosa</li>
+                <li>Vada Sambhar</li>
+                <li>Paper Plain Dosa</li>
+                <li>Tomato Uttapam</li>
+            </ul>
+        </div>
+        <div class="food">
+            <h1>Indian Kitchen</h1>
+            <hr>
             <ul>
                 <li>Shahi Paneer</li>
                 <li>kadhai Paneer</li>
@@ -87,7 +102,9 @@
                 <li>Stuff Capsicum</li>
             </ul>
         </div>
-        <div class="food"><h1>Rice & Salad</h1><hr>
+        <div class="food">
+            <h1>Rice & Salad</h1>
+            <hr>
             <ul>
                 <li>Plain rice</li>
                 <li>Jeera Rice</li>
@@ -98,7 +115,9 @@
                 <li>Masala Salad</li>
             </ul>
         </div>
-        <div class="food"><h1>Tandoori Bread</h1><hr>
+        <div class="food">
+            <h1>Tandoori Bread</h1>
+            <hr>
             <ul>
                 <li>Butter Roti</li>
                 <li>Missi Roti</li>
@@ -109,8 +128,10 @@
                 <li>Stuff parantha</li>
             </ul>
         </div>
-        <div class="food last"><h1>Beverages and
-            Other</h1><hr>
+        <div class="food last">
+            <h1>Beverages and
+                Other</h1>
+            <hr>
             <ul>
                 <li>Cold Coffee</li>
                 <li>Coldrinks</li>
