--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 
 <body>
     <div class="layout-1">
-        <div class="box1">
+        <div class="box1 box">
             <h1>Welcome to the best Indian cuisine restaurant</h1>
         </div>
-        <div class="box2">
+        <div class="box2 box">
             <h2>Home Menu Contact us</h2>
         </div>
-        <div class="box3">
+        <div class="box3 box">
             <h2>Email:xyxyx@gmail.com</h2>
             <h2>If You find any complain</h2>
             <h2>Contact no: 4545******</h2>
