--- a/index.html
+++ b/index.html
@@ -25,11 +25,13 @@
     </div>
     <div class="layout-2">
         <div class="left">
-            <h2>EXICITING OFFERS</h2>
-            <hr>
-            <h2>**GET OUR SPECIAL THALI FOR ONLY RS-100 ONLY ON MONDAY**</h2>
-            <hr>
-            <h2>PLZ RATE US OUT OF 5</h2>
+            <div class="circle">
+                <h2>EXICITING OFFERS</h2>
+                <hr>
+                <h2>**GET OUR SPECIAL THALI FOR ONLY RS-100 ONLY ON MONDAY**</h2>
+                <hr>
+                <h2>PLZ RATE US OUT OF 5</h2>
+            </div>
         </div>
         <div class="right">
             <form>
